# test-qwen-repo

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  package-lock.json  package.json  pyproject.toml  vercel.json
scripts/: setup.sh
src/: core.py  main.py
src/app/: globals.css  layout.tsx  page.tsx
src/app/(dashboard)/dashboard/: layout.tsx
src/app/(dashboard)/dashboard/appointments/: page.tsx
src/app/(dashboard)/dashboard/billing/: page.tsx
src/app/(dashboard)/dashboard/login/: page.tsx
src/app/(dashboard)/dashboard/overview/: page.tsx
src/app/(dashboard)/dashboard/patients/: page.tsx
src/app/(dashboard)/dashboard/records/: page.tsx
src/app/(dashboard)/dashboard/treatments/: page.tsx
src/app/(landing)/: page.tsx
src/app/login/: page.tsx
src/components/: CTA.tsx  Features.tsx  Footer.tsx  Hero.tsx  Navbar.tsx  Pricing.tsx  Testimonials.tsx
src/components/dashboard/: DashboardHeader.tsx  DashboardSidebar.tsx
src/components/landing/: Contact.tsx  Footer.tsx  Hero.tsx  LandingNavbar.tsx  Services.tsx  Stats.tsx  Team.tsx  Testimonials.tsx
src/context/: AuthContext.tsx  DataContext.tsx
tests/: test_core.py
web/src/app/: globals.css
web/src/components/: CTA.tsx  Features.tsx  Footer.tsx  Hero.tsx  Navbar.tsx  Pricing.tsx  Testimonials.tsx
