[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends.build_meta"

[project]
name = "test-qwen-repo"
version = "0.1.0"
description = "A professional Python project"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "fmmarco29"}
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "black",
    "ruff",
    "mypy"
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
